--- a/webserver/static/web/main.css
+++ b/webserver/static/web/main.css
@@ -313,3 +313,31 @@ div.box {
     }
 
 }
+
+.space-top {
+    padding-top: 10px;
+}
+
+.joystick {
+    height: 300px;
+    width: 300px;
+    border-radius: 300px;
+    -moz-border-radius: 300px;
+    -webkit-border-radius: 300px;
+    text-align: center;
+    background-color: #80d5ff;
+    font: 24px/300px Helvetica, Arial, sans-serif;
+    cursor: all-scroll;
+    user-select: none;
+    z-index: -100;
+    margin: 20px;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
