--- a/webserver/static/web/main.css
+++ b/webserver/static/web/main.css
@@ -318,19 +318,27 @@ div.box {
     padding-top: 10px;
 }
 
+
 .joystick {
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 240px;
     border-radius: 300px;
     -moz-border-radius: 300px;
     -webkit-border-radius: 300px;
     text-align: center;
-    background-color: #80d5ff;
     font: 24px/300px Helvetica, Arial, sans-serif;
     cursor: all-scroll;
     user-select: none;
     z-index: -100;
     margin: 20px;
+}
+
+#joystick-left{
+    background: url(imgs/tello-controller-left.jpg) no-repeat 0px -10px;
+}
+
+#joystick-right{
+    background: url(imgs/tello-controller-right.jpg) no-repeat 0px -13px;
 }
 
 .noselect {
